--- a/Mv-m/Sobre/index.html
+++ b/Mv-m/Sobre/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Sobre/style.css">
+    <link rel="stylesheet" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Sobre/style.css">
     <title>Marshverso | Sobre</title>
     <link rel="icon"
     href="https://cdn-icons.flaticon.com/png/512/3966/premium/3966907.png?token=exp=1646665861~hmac=d4770ab2b696378ea1f9a8876642d23c" />
