--- a/Mv-m/Sobre/index.html
+++ b/Mv-m/Sobre/index.html
@@ -13,10 +13,10 @@
     <header class="navigation-menu">
         <a href="https://discord.gg/dyPVj3XXYh"><img class="logo-img" src="https://cdn.discordapp.com/icons/855393021336092672/a_2738f7518b3fd211f0eb917e8beea0e3.gif" alt="Marshverso!"></a>
         <div class="Categories">
-            <a id="selected-primary" href="/Sobre/index.html">
+            <a id="selected-primary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Sobre/index.html">
                 Sobre ㅤ
             </a>
-            <a id="selected-secundary" href="/Feedback/index.html">
+            <a id="selected-secundary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Feedback/index.html">
                 ㅤFeedbackㅤ
             </a>
         </div>
