--- a/Mv-m/Sobre/index.html
+++ b/Mv-m/Sobre/index.html
@@ -16,7 +16,7 @@
             <a id="selected-primary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Sobre/index.html">
                 Sobre ㅤ
             </a>
-            <a id="selected-secundary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Feedback/index.html">
+            <a id="selected-secundary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Realimentação/index.html">
                 ㅤFeedbackㅤ
             </a>
         </div>
