--- a/Mv-m/Realimentação/index.html
+++ b/Mv-m/Realimentação/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Feedback/style.css">
+    <link rel="stylesheet" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Realimentação/style.css">
     <title>Marshverso | Feedback</title>
     <link rel="icon"
     href="https://cdn-icons.flaticon.com/png/512/3966/premium/3966907.png?token=exp=1646665861~hmac=d4770ab2b696378ea1f9a8876642d23c" />
@@ -16,7 +16,7 @@
             <a id="selected-secundary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Sobre/index.html">
                 Sobre ㅤ
             </a>
-            <a id="selected-primary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Feedback/index.html">
+            <a id="selected-primary" href="https://curiosus13.github.io/Marshverso-mobile/Mv-m/Realimentação/index.html">
                 ㅤFeedbackㅤ
             </a>
         </div>
